fixed submit button overflow

--- a/Client/src/Components/NewReport/CreateReport/createReport.css
+++ b/Client/src/Components/NewReport/CreateReport/createReport.css
@@ -2,9 +2,10 @@
   visibility: visible;
   z-index: 10;
   background: rgb(255, 255, 255);
-  border-radius: var(--radius);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   width: 100vw;
-  height: 75vh;
+  /* height: 75vh; */
   max-width: var(--fixed-width);
   text-align: center;
   place-items: center;
